--- a/style.css
+++ b/style.css
@@ -10,10 +10,30 @@
 body{
     margin: 0;
 }
+nav{
+    padding: 1rem;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    
+}
+nav>button{
+    padding: 0.3rem 0.5rem;
+    margin-right: 2rem;
+    font-size: 1.5rem;
+    background-color: #000;
+    color: #fff;
+    border-radius: 10px;
+}
+
+nav>button:hover{
+    background-color: #fff;
+    color: #000;
+}
 
 .board{
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     display: grid;
     /* these both content values center the .cell  */
     justify-content: center; 
